--- a/package.json
+++ b/package.json
@@ -3,13 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "npm run dev:app & npm run dev:mastra",
+    "dev:app": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
     "lint": "biome check",
-    "format": "biome format --write"
+    "format": "biome format --write",
+    "dev:mastra": "npx mastra dev --dir lib/mastra"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.42",
+    "@mastra/core": "^0.20.0",
+    "@mastra/libsql": "^0.15.1",
+    "@mastra/loggers": "^0.10.15",
+    "@mastra/memory": "^0.15.5",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-scroll-area": "^1.2.10",
@@ -27,17 +34,18 @@
     "react-dom": "19.1.0",
     "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@biomejs/biome": "2.2.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "tailwindcss": "^4",
+    "@tailwindcss/postcss": "^4.1.14",
+    "@types/node": "^24.6.2",
+    "@types/react": "^19.2.0",
+    "@types/react-dom": "^19.2.0",
+    "@typescript/native-preview": "^7.0.0-dev.20250920.1",
+    "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "@typescript/native-preview": "^7.0.0-dev.20250920.1"
+    "typescript": "^5.9.3"
   }
 }
