--- a/package.json
+++ b/package.json
@@ -3,13 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npm run dev:app & npm run dev:mastra",
+    "dev": "npm run dev:app & npm run dev:mastra & npm run db:studio",
     "dev:app": "next dev --turbopack",
     "build": "next build --turbopack",
     "start": "next start",
-    "lint": "biome check",
+    "lint": "biome check --write --unsafe",
     "format": "biome format --write",
-    "dev:mastra": "npx mastra dev --dir lib/mastra"
+    "dev:mastra": "npx mastra dev --dir lib/mastra",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "db:seed": "tsx lib/db/seed.ts"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.42",
@@ -17,6 +20,7 @@
     "@mastra/libsql": "^0.15.1",
     "@mastra/loggers": "^0.10.15",
     "@mastra/memory": "^0.15.5",
+    "@mastra/pg": "^0.17.1",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -28,10 +32,13 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "drizzle-kit": "^0.31.5",
+    "drizzle-orm": "^0.44.6",
     "lefthook": "^1.13.6",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
     "next-themes": "^0.4.6",
+    "postgres": "^3.4.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
@@ -44,10 +51,12 @@
     "@biomejs/biome": "2.2.0",
     "@tailwindcss/postcss": "^4.1.14",
     "@types/node": "^24.6.2",
+    "@types/pg": "^8.15.5",
     "@types/react": "^19.2.0",
     "@types/react-dom": "^19.2.0",
     "@typescript/native-preview": "^7.0.0-dev.20250920.1",
     "tailwindcss": "^4.1.14",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   }
