--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.42",
+    "@assistant-ui/react": "^0.11.28",
+    "@assistant-ui/react-ai-sdk": "^1.1.5",
+    "@assistant-ui/react-ui": "^0.2.0",
     "@mastra/core": "^0.20.0",
     "@mastra/libsql": "^0.15.1",
     "@mastra/loggers": "^0.10.15",
@@ -43,6 +46,7 @@
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
     "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.11",
     "zustand": "^5.0.8"
   },
