--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/openai": "^2.0.42",
     "@assistant-ui/react": "^0.11.28",
     "@assistant-ui/react-ai-sdk": "^1.1.5",
+    "@assistant-ui/react-markdown": "^0.11.1",
     "@assistant-ui/react-ui": "^0.2.0",
     "@mastra/core": "^0.20.0",
     "@mastra/libsql": "^0.15.1",
@@ -30,6 +31,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@vercel/analytics": "^1.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -45,6 +47,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.64.0",
     "react-resizable-panels": "^3.0.6",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.11",
