--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:mastra": "npx mastra dev --dir lib/mastra",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "db:seed": "tsx lib/db/seed.ts"
+    "db:seed": "tsx lib/db/seed.ts",
+    "db:reset": "DATABASE_URL=$JOBS_APP_DATABASE_URL drizzle-kit push --force && DATABASE_URL=$JOBS_CHAT_DATABASE_URL drizzle-kit push --force"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.42",
@@ -34,6 +35,7 @@
     "cmdk": "^1.1.1",
     "drizzle-kit": "^0.31.5",
     "drizzle-orm": "^0.44.6",
+    "immer": "^10.1.3",
     "lefthook": "^1.13.6",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
